<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weekly Meal Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_data_test">DataTest</string>
    <string name="Sunday_Button">Sunday</string>
    <string name="Monday_Button">Monday</string>
    <string name="Tuesday_Button">Tuesday</string>
    <string name="Wednesday_Button">Wednesday</string>
    <string name="Thursday_Button">Thursday</string>
    <string name="Friday_Button">Friday</string>
    <string name="Saturday_Button">Saturday</string>
    <string name="title_activity_display_meal_time">DisplayMealTime</string>
    <string name="Breakfast_Button">Breakfast</string>
    <string name="Lunch_Button">Lunch</string>
    <string name="Dinner_Button">Dinner</string>
    <string name="title_activity_display_recipe">DisplayRecipe</string>
    <string name="title_activity_crudmeal_plan">CRUDMealPlan</string>
    <string name="Meal_Plan_Name">Meal Plan Name</string>
    <string name="Create_MealPlan_Button">Create Meal Plan</string>
    <string name="title_activity_display_weekdays">DisplayWeekdays</string>
    <string name="Update_MealPlan_Button">Update Meal Plan</string>
    <string name="title_activity_display_meal_plan">DisplayMealPlan</string>
    <string name="Title_Sunday">Sunday</string>
    <string name="Title_Monday">Monday</string>
    <string name="Title_Tuesday">Tuesday</string>
    <string name="Title_Wednesday">Wednesday</string>
    <string name="Title_Thursday">Thursday</string>
    <string name="Title_Friday">Friday</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Title_Saturday">Saturday</string>
    <string name="remove_recipe">Remove</string>
    <string name="add_recipe">Add</string>
    <string name="display_recipe">View Recipe</string>
    <string name="title_activity_wmp">WMP</string>

</resources>